  & `hash_sentiment_loughran_mcdonald` sentiment hash tables added for use in
  the **sentimentr** package.

* `modal_loughran_mcdonald` added; a data.table of wea, moderate, and strong
  modal verbs.

* `constraining_loughran_mcdonald` added, a vector of words that are associated
  with constraining.


MINOR FEATURES

IMPROVEMENTS

CHANGES

*  The word "incredibly" was removed from `hash_sentiment_jockers`,
  `hash_sentiment_huliu`, & `hash_sentiment_sentiword` and added as an amplifier
  to `hash_valence_shifters`.  Spotted by AbdulMajedRaja:
  https://github.com/trinker/sentimentr/issues/58#issuecomment-343373693



lexicon 0.4.0 - 0.4.1
----------------------------------------------------------------

BUG FIXES

* `function_words` contained duplicates that have been been removed.

* `hash_lemmas` contained an erroneous token-lemma pair (also-conjurer).  This
  was spotted by Mitchell Linegar (see https://github.com/trinker/textstem/issues/5).
  The token `also` has been removed from the dictionary.


NEW FEATURES

* `pos_df_irregular_nouns` and `pos_unchanging_nouns` added.  The former is a
  data.frame of singular and plural forms of irregular nouns.  The latter is
  a simple list of irregular nouns that have the same singular and plural forms.

* `profanity_alvarez`, `profanity_arr_bad`, `profanity_banned`,
  `profanity_google`, & `profanity_von_ahn` added to give access to profanity
  word lists.



lexicon 0.3.0 - 0.3.1
----------------------------------------------------------------

BUG FIXES

* `freq_first_names` and `freq_last_names` were just a string of the data set
  name.  This has been updated with the actual data set.


NEW FEATURES

* `available_data` added to see what data sets are available in **lexicon**.


lexicon 0.2.0
----------------------------------------------------------------

NEW FEATURES

* `hash_sentiment_jockers` and `key_sentiment_jockers` added as objects though